--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 
-    <script src="slider.js"></script>
+    <script src=js/"slider.js"></script>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
